threeoutput.txt
     ^
oopii@oopiibox:~/Documents$ g++ two.cpp
two.cpp: In function ‘int main()’:
two.cpp:9:6: error: conflicting declaration ‘char arg1’
 char arg1 = 'A';
      ^
two.cpp:5:5: note: previous declaration as ‘int arg1’
 int arg1;
     ^
oopii@oopiibox:~/Documents$ ls
a.out  one.cpp  two.cpp
oopii@oopiibox:~/Documents$ g++ one.cpp
oopii@oopiibox:~/Documents$ ./a.out
31.4159
oopii@oopiibox:~/Documents$ ls
a.out  one.cpp  three.cpp  two.cpp
oopii@oopiibox:~/Documents$ g++ three.cpp
three.cpp: In function ‘int main()’:
three.cpp:10:1: error: expected ‘}’ at end of input
 }
 ^
oopii@oopiibox:~/Documents$ g++ three.cpp
oopii@oopiibox:~/Documents$ ./a.out
0
1
2
3
4
5
6
7
8
9
oopii@oopiibox:~/Documents$ clear
oopii@oopiibox:~/Documents$ g++ three.cpp
oopii@oopiibox:~/Documents$ ./a.out
0
1
2
3
4
5
6
7
8
9
oopii@oopiibox:~/Documents$ 






















